# gcs_demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  docker-compose.local.yml  docker-compose.prod.yml  메모.md
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  errors.py
backend/app/core/: config.py  logging.py  policy_presets.py  security.py
backend/app/db/: session.py
backend/app/dtos/: __init__.py  path.py  rbac.py  user.py
backend/app/models/: __init__.py  ai_queue.py  candidate.py  document.py  drive_sync.py  organization.py  user.py
backend/app/repos/: __init__.py  ai_jobs.py  candidates.py  document_tree.py  document_types.py  documents.py  drive_sync.py  organization.py  path_history.py  relation_candidates.py  users.py
backend/app/schemas/: __init__.py  approval.py  auth.py  classification.py  document_tree.py  documents.py  drive_sync.py  explorer.py  organization.py  users.py
backend/app/seeds/: __init__.py  __main__.py  organization.py  users.py
backend/app/services/: __init__.py  ai_jobs.py  approval.py  auth.py  classification.py  document_tree.py  documents.py  drive_sync.py  explorer.py  organization.py  rbac.py  relation_candidates.py  users.py
backend/app/tests/: conftest.py  drive_fakes.py  test_admin_users.py  test_ai_jobs.py  test_approval_gate.py  test_auth.py  test_classification_api.py  test_classification_worker.py  test_documents_api.py  test_drive_client.py  test_drive_connector_api.py  test_drive_sync.py  test_explorer_api.py  test_migration.py  (+5 more)
(+48 files in other folders)
